--- a/dockerFiles/DockerfileReukema
+++ b/dockerFiles/DockerfileReukema
@@ -21,8 +21,7 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install pdo_mysql \
     && docker-php-ext-install mysqli \
     && docker-php-ext-install zip \
-    && docker-php-ext-install opcache \
-    && docker-php-ext-enable opcache \
+    && apt-get install -y cron \
     && docker-php-source delete
 
 RUN mkdir -p /var/log/supervisor
@@ -36,3 +35,15 @@ RUN a2enmod rewrite
 
 RUN curl -sL https://deb.nodesource.com/setup_19.x | bash - && \
 apt-get install -yq nodejs build-essential
+
+ADD dockerFiles/crontab /etc/cron.d/crontab
+# Give execution rights on the cron job
+RUN chmod 0644 /etc/cron.d/crontab
+
+RUN crontab /etc/cron.d/crontab
+
+# Create the log file to be able to run tail
+RUN touch /var/log/cron.log
+
+# Run the command on container startup
+CMD cron && tail -f /var/log/cron.log
